<resources>
    <string name="app_name">Easy Food</string>

    <string name="sign_up_if_do_not_have_account">Don\'t have an account? Sign up!</string>
    <string name="forgot_login_details">Forgot your login details? Get help signing in.</string>
    <string name="already_have_account">Already have an account? Log in.</string>
    <string name="create_new_account">Create a new account</string>
    <string name="Login">Login</string>
    <string name="LogOut">Log out</string>
    <string name="Sign_up">Sign up</string>
    <string name="Update">Update</string>
    <string name="Delete_profile">Delete your profile</string>
    <string name="Edit_user">Edit your profile</string>

    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="Username">Username</string>
    <string name="Name">Name</string>
    <string name="Last_name">Last name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Repeat_password">Repeat password</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Residence">Residence</string>
    <string name="Address">Address</string>
    <string name="Location">Location</string>
    <string name="Type">Type</string>
    <string name="Rating">Rating</string>
    <string name="Details">Details</string>

    <string name="Settings">Settings</string>
    <string name="New_password">New password</string>
    <string name="Current_password">Current password</string>
    <string name="Edit_password">Edit password</string>

    <string name="Open_now">Open now</string>
    <string name="All_restaurants">All the restaurants</string>
    <string name="Search">Search</string>
    <string name="Map">Map</string>
    <string name="Account">Account</string>
    <string name="Rate">Rate</string>

    <string name="input_empty_fields">It looks like some fields are empty</string>
    <string name="passwords_not_equals">Please, insert the same password</string>
    <string name="No_internet_connection">No internet connection. Please, check your settings and try again</string>
    <string name="login_not_valid">Your credentials are not valid</string>
    <string name="server_unreachable">There was a problem with the server. Try later</string>
    <string name="email_not_valid">The email looks like to be not correct</string>
    <string name="user_deleted_successfully">Your profile has been deleted</string>
    <string name="user_not_deleted">Ops..There is a problem! Your profile has not been deleted</string>
    <string name="user_updated_successfully">Your profile has been updated</string>
    <string name="user_not_updated">Ops..There is a problem! Your profile has not been updated</string>
    <string name="email_already_used_but_updated">Email already used but the other information have been updated</string>
    <string name="delete_profile">Delete profile</string>
    <string name="are_you_sure_delete_profile">Are you sure you want to delete your profile?</string>
    <string name="email_already_used">Email already used</string>
    <string name="username_already_used">Username already used</string>
    <string name="general_error_message">An error occurred. Please restart the app</string>
    <string name="gps_not_enabled">You must enable the GPS service to enjoy this feature</string>
    <string name="No_restaurant_found_near_you">It seems there are no restaurants near you</string>
    <string name="Impossible_to_get_your_location">A problem occurred. It is impossible to get your location</string>
    <string name="password_not_valid">The password is not valid</string>

    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_main">Easy Food</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
