<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/user_information_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/userUsernameLabel"
                style="@style/DefaultLabel"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Username" />

            <TextView
                android:id="@+id/account_user_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Username" />

            <TextView
                android:id="@+id/userNameLabel"
                style="@style/DefaultLabel"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Name" />

            <TextView
                android:id="@+id/account_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Name" />

            <TextView
                android:id="@+id/userLastNameLabel"
                style="@style/DefaultLabel"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Last_name" />

            <TextView
                android:id="@+id/account_user_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="LastName" />

            <TextView
                android:id="@+id/userEmailLabel"
                style="@style/DefaultLabel"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Email"/>

            <TextView
                android:id="@+id/account_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="20sp"
            android:layout_below="@+id/user_information_layout">

            <Button
                android:id="@+id/btnUpdateUserInformation"
                style="@style/DefaultButton"
                android:width="300sp"
                android:text="@string/Edit_user"/>
            <Button
                android:id="@+id/btnLogOutUser"
                android:layout_marginTop="10sp"
                style="@style/DefaultButton"
                android:width="300sp"
                android:text="@string/LogOut"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>