<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/default_toolbar"
        layout="@layout/default_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/user_information_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">


                <EditText
                    android:id="@+id/edit_user_current_password"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"                    style="@style/DefaultEditText"
                    android:inputType="textPassword"
                    android:hint="@string/Current_password" />



                <EditText
                    android:id="@+id/edit_user_new_password"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"                    style="@style/DefaultEditText"
                    android:inputType="textPassword"
                    android:layout_marginTop="6dp"
                    android:hint="@string/New_password" />


                <EditText
                    android:id="@+id/edit_user_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    style="@style/DefaultEditText"
                    android:inputType="textPassword"
                    android:layout_marginTop="6dp"
                    android:hint="@string/Repeat_password" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:padding="12sp"
                android:layout_below="@+id/user_information_layout">

                <Button
                    android:id="@+id/btnUpdateUserPassword"
                    style="@style/DefaultButton"
                    android:width="300sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/Update"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>