<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/default_toolbar"
        layout="@layout/default_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/user_information_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">


                <EditText
                    android:id="@+id/edit_account_user_name"
                    android:layout_width="match_parent"
                    style="@style/DefaultEditText"
                    android:inputType="textPersonName"
                    android:hint="Name" />



                <EditText
                    android:id="@+id/edit_account_user_last_name"
                    android:layout_width="match_parent"
                    style="@style/DefaultEditText"
                    android:inputType="textPersonName"
                    android:layout_marginTop="6dp"
                    android:hint="LastName" />


                <EditText
                    android:id="@+id/edit_account_user_email"
                    android:layout_width="match_parent"
                    style="@style/DefaultEditText"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="6dp"
                    android:hint="Email" />


                <EditText
                    android:id="@+id/edit_account_user_phone_number"
                    android:layout_width="match_parent"
                    style="@style/DefaultEditText"
                    android:inputType="phone"
                    android:layout_marginTop="6dp"
                    android:hint="@string/PhoneNumber" />


                <AutoCompleteTextView
                    android:id="@+id/edit_account_user_residence"
                    android:layout_width="match_parent"
                    style="@style/DefaultEditText"
                    android:inputType="textAutoComplete"
                    android:hint="@string/Residence"
                    android:layout_marginTop="6dp" />

                <EditText
                    android:id="@+id/edit_account_user_address"
                    android:layout_width="match_parent"
                    style="@style/DefaultEditText"
                    android:inputType="textPostalAddress"
                    android:layout_marginTop="6dp"
                    android:hint="@string/Address" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:padding="12sp"
                android:layout_below="@+id/user_information_layout">

                <Button
                    android:id="@+id/btnUpdateUser"
                    style="@style/DefaultButton"
                    android:width="300sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/Update"/>

                <Button
                    android:id="@+id/btnDeleteUser"
                    android:layout_marginTop="10sp"
                    style="@style/DefaultButton"
                    android:width="300sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/Delete_profile"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>