<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.SignUpActivity"
        android:clickable="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/sign_up_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="20sp">

            <EditText
                android:layout_marginTop="30sp"
                android:id="@+id/txtSignUpName"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_edit_text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:padding="10sp"
                android:shadowRadius="200"
                android:inputType="textPersonName"
                android:textSize="18sp"
                android:hint="@string/Name"/>

            <EditText
                android:layout_marginTop="10sp"
                android:id="@+id/txtSignUpLastName"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_edit_text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:padding="10sp"
                android:shadowRadius="200"
                android:inputType="textPersonName"
                android:textSize="18sp"
                android:hint="@string/Last_name"/>

            <EditText
                android:layout_marginTop="10sp"
                android:id="@+id/txtSignUpUsername"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_edit_text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:padding="10sp"
                android:inputType="textPersonName"
                android:shadowRadius="200"
                android:textSize="18sp"
                android:hint="@string/Username"/>

            <EditText
                android:id="@+id/txtSignUpPassword"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/transparent_edit_text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:padding="10sp"
                android:inputType="textPassword"
                android:hint="@string/Password"
                android:ems="10"
                android:textSize="18sp"
                android:textIsSelectable="false" />

            <EditText
                android:id="@+id/txtSignUpRepeatPassword"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/transparent_edit_text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:padding="10sp"
                android:inputType="textPassword"
                android:hint="@string/Repeat_password"
                android:ems="10"
                android:textSize="18sp"
                android:textIsSelectable="false" />

            <EditText
                android:layout_marginTop="10sp"
                android:id="@+id/txtSignUpEmail"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_edit_text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:padding="10sp"
                android:shadowRadius="200"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:hint="@string/Email"/>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_button"
                android:layout_marginTop="20sp"
                android:text="@string/create_new_account"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="10sp"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:textSize="18sp"
                android:clickable="true" />

        </LinearLayout>
        <RelativeLayout
            android:id="@+id/blank_space"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/sign_up_layout"></RelativeLayout>
        <FrameLayout
            android:layout_marginTop="80sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_below="@+id/blank_space">
            <LinearLayout
                android:id="@+id/takeMeToSignUpActivity"
                style="@style/FullscreenTheme.NoActionBar"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_width="match_parent"
                tools:ignore="UselessParent">
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2sp"
                    android:background="@color/white"
                    android:minHeight="2sp"/>
                <TextView
                    android:id="@+id/txtTakeMeToLoginActivity"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:background="@color/white_overlay"
                    android:textColor="@color/white"
                    android:padding="10sp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/already_have_account"
                    tools:targetApi="jelly_bean_mr1" />

            </LinearLayout>
        </FrameLayout>

    </RelativeLayout>
</ScrollView>